--- a/config/interface.conf
+++ b/config/interface.conf
@@ -3,7 +3,7 @@ server {
     server_name  birddoc.com;
 
     location / {
-        root   /home/user/project/github/ShareDoc/public;
+        root   /home/ShareDoc/public;
         index  index.html index.htm;
         try_files $uri $uri/ =404;
     }
